syntax = "proto3";

package rpc_client;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "auth.proto";

option go_package = "rpc_client";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.gostring_all) = true;

service AuthService {
  rpc ReqUpdateAuthKey(UpdateAuthKey) returns(google.protobuf.Any) {}
  rpc ReqAuthKey(AuthKey) returns(AuthKeyInfo) {}
  rpc ReqAuthKeyWithLayer(AuthKeyWithLayer) returns(google.protobuf.Any) {}
  rpc ReqBindTempAuthKeyAuthKeyId(BindTempAuthKeyAuthKeyId) returns(google.protobuf.Any) {}
  rpc ReqBindedUser(BindedUser) returns(google.protobuf.Any) {}
  rpc ReqBindUser(BindUser) returns(google.protobuf.Any) {}
  rpc ReqUserSession(UserSession) returns(UserSessionInfo) {}
  rpc ReqRegisterDevice(UserDevice) returns(google.protobuf.Any) {}
  rpc ReqClose(Close) returns(google.protobuf.Any) {}
  rpc ReqUnbindAuthKeyUser(UnbindAuthKeyUser) returns(google.protobuf.Any) {}
}
